parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMA
    DEFAULT
    DELETE
    DIVIDE
    DROP
    EQUAL
    FROM
    GREATER_EQUAL
    GREATER_THAN
    IDENTITY
    INSERT
    INTO
    IS
    KEY
    LBRACE
    LBRACKET
    LESS_EQUAL
    LESS_THAN
    LPAREN
    MINUS
    MOD
    NOT
    NOT_EQUAL
    NULL
    PLUS
    POWER
    PRIMARY
    RBRACE
    RBRACKET
    RPAREN
    SELECT
    SET
    TIMES
    UNIQUE
    UPDATE
    VALUES
    WHERE

Grammar

Rule 0     S' -> script
Rule 1     script -> <empty>
Rule 2     script -> command SEMICOLON script
Rule 3     command -> TRUNCATE TABLE object
Rule 4     command -> CREATE DATABASE object
Rule 5     type -> INT
Rule 6     type -> STRING
Rule 7     object -> ID
Rule 8     object -> ID DOT ID
Rule 9     object -> ID DOT ID DOT ID

Terminals, with rules where they appear

COMMA                : 
CREATE               : 4
DATABASE             : 4
DEFAULT              : 
DELETE               : 
DIVIDE               : 
DOT                  : 8 9 9
DROP                 : 
EQUAL                : 
FROM                 : 
GREATER_EQUAL        : 
GREATER_THAN         : 
ID                   : 7 8 8 9 9 9
IDENTITY             : 
INSERT               : 
INT                  : 5
INTO                 : 
IS                   : 
KEY                  : 
LBRACE               : 
LBRACKET             : 
LESS_EQUAL           : 
LESS_THAN            : 
LPAREN               : 
MINUS                : 
MOD                  : 
NOT                  : 
NOT_EQUAL            : 
NULL                 : 
PLUS                 : 
POWER                : 
PRIMARY              : 
RBRACE               : 
RBRACKET             : 
RPAREN               : 
SELECT               : 
SEMICOLON            : 2
SET                  : 
STRING               : 6
TABLE                : 3
TIMES                : 
TRUNCATE             : 3
UNIQUE               : 
UPDATE               : 
VALUES               : 
WHERE                : 
error                : 

Nonterminals, with rules where they appear

command              : 2
object               : 3 4
script               : 2 0
type                 : 

Parsing method: LALR

state 0

    (0) S' -> . script
    (1) script -> .
    (2) script -> . command SEMICOLON script
    (3) command -> . TRUNCATE TABLE object
    (4) command -> . CREATE DATABASE object

    $end            reduce using rule 1 (script -> .)
    TRUNCATE        shift and go to state 3
    CREATE          shift and go to state 4

    script                         shift and go to state 1
    command                        shift and go to state 2

state 1

    (0) S' -> script .



state 2

    (2) script -> command . SEMICOLON script

    SEMICOLON       shift and go to state 5


state 3

    (3) command -> TRUNCATE . TABLE object

    TABLE           shift and go to state 6


state 4

    (4) command -> CREATE . DATABASE object

    DATABASE        shift and go to state 7


state 5

    (2) script -> command SEMICOLON . script
    (1) script -> .
    (2) script -> . command SEMICOLON script
    (3) command -> . TRUNCATE TABLE object
    (4) command -> . CREATE DATABASE object

    $end            reduce using rule 1 (script -> .)
    TRUNCATE        shift and go to state 3
    CREATE          shift and go to state 4

    command                        shift and go to state 2
    script                         shift and go to state 8

state 6

    (3) command -> TRUNCATE TABLE . object
    (7) object -> . ID
    (8) object -> . ID DOT ID
    (9) object -> . ID DOT ID DOT ID

    ID              shift and go to state 10

    object                         shift and go to state 9

state 7

    (4) command -> CREATE DATABASE . object
    (7) object -> . ID
    (8) object -> . ID DOT ID
    (9) object -> . ID DOT ID DOT ID

    ID              shift and go to state 10

    object                         shift and go to state 11

state 8

    (2) script -> command SEMICOLON script .

    $end            reduce using rule 2 (script -> command SEMICOLON script .)


state 9

    (3) command -> TRUNCATE TABLE object .

    SEMICOLON       reduce using rule 3 (command -> TRUNCATE TABLE object .)


state 10

    (7) object -> ID .
    (8) object -> ID . DOT ID
    (9) object -> ID . DOT ID DOT ID

    SEMICOLON       reduce using rule 7 (object -> ID .)
    DOT             shift and go to state 12


state 11

    (4) command -> CREATE DATABASE object .

    SEMICOLON       reduce using rule 4 (command -> CREATE DATABASE object .)


state 12

    (8) object -> ID DOT . ID
    (9) object -> ID DOT . ID DOT ID

    ID              shift and go to state 13


state 13

    (8) object -> ID DOT ID .
    (9) object -> ID DOT ID . DOT ID

    SEMICOLON       reduce using rule 8 (object -> ID DOT ID .)
    DOT             shift and go to state 14


state 14

    (9) object -> ID DOT ID DOT . ID

    ID              shift and go to state 15


state 15

    (9) object -> ID DOT ID DOT ID .

    SEMICOLON       reduce using rule 9 (object -> ID DOT ID DOT ID .)

